--- a/src/index.css
+++ b/src/index.css
@@ -36,8 +36,18 @@
 
 body {
   margin: 0 auto;
+  padding: 0;
+  overflow-x: hidden;
+  width: 100%;
   max-width: 1440px;
   background-color: var(--bg-primary);
+}
+
+html {
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+  width: 100%;
 }
 
 
