--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,7 @@ p, h1, h2, h3, h4 {
   position: fixed;
   bottom: 40px;
   right: 40px;
+  
   width: 40px;
   height: 40px;
 
@@ -27,4 +28,10 @@ p, h1, h2, h3, h4 {
   background-color: rgba(138, 155, 104, 0.8);
   box-shadow: 0 4px 5px rgba(0, 0, 0, 0.25)
 }
+
+
+/* Debugging */
+/* * {
+  outline: 1px solid red !important;
+} */
 
