--- a/src/components/home/ContactMe.css
+++ b/src/components/home/ContactMe.css
@@ -142,7 +142,8 @@
 .contact__right .contact__right-contacts .contact__email:hover,
 .contact__right .contact__right-contacts .contact__linkedin:hover {
   cursor: pointer;
-
+  background-color: rgba(216, 207, 182, 0.8);
+  box-shadow: 3px 3px 6px rgba(0, 0, 0, 0.25);
 }
 
 .contact__right .contact__right-contacts .contact__whatsapp .contact__whatsapp-content,
