--- a/src/pages/home/Others.css
+++ b/src/pages/home/Others.css
@@ -2,7 +2,7 @@
 .others {
   height: fit-content;
   padding: 25px 40px;
-  margin: 60px 50px;
+  margin: 60px 50px 0px;
   scroll-margin-top: 120px;
 
   display: flex;
