--- a/src/pages/home/Projects.css
+++ b/src/pages/home/Projects.css
@@ -108,14 +108,13 @@
 }
 
 .project-card:hover {
-  border: 4px solid var(--green-dark);
+  border: 3px solid var(--green-dark);
   box-shadow: 0 10px 10px rgba(0, 0, 0, 0.25);
 }
 
 .project-card:active {
   cursor: grab;
 }
-
 
 .project-card .project-card__image {
   width: 100%;
@@ -196,6 +195,13 @@
 
   cursor: pointer;
   transition: background-color 0.3s ease;
+}
+
+.project-card .project-card__buttons .project__button p {
+  color: var(--color-white);
+  font-weight: 400;
+  font-size: 12px;
+  font-family: var(--poppins);
 }
 
 .project-card .project-card__buttons .project__button:hover {
