--- a/src/pages/more/More.css
+++ b/src/pages/more/More.css
@@ -30,8 +30,13 @@
 
     border-radius: 10px;
     box-shadow: 3px 4px 5px rgba(0, 0, 0, 0.25);
+
+    transition: 0.5s ease;
 }
 
+.more__masonry img:hover {
+    transform: translateY(-8px);
+}
 
 @media screen and (max-width: 680px) {
     .more__title h2 {
