--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -6,7 +6,7 @@
   align-items: center;
 
   width: 100%;
-  padding: 8px 0px !important;
+  padding: 4px 0px !important;
 
   background-color: transparent;
   padding: 0px;
@@ -21,7 +21,7 @@
 .header__nav .header__logo .header__logo-title {
   font-family: var(--poppins);
   color: var(--brown-darker);
-  font-size: 20px;
+  font-size: 16px;
   text-align: center;
 }
 
@@ -41,7 +41,7 @@
   font-weight: 500;
   font-family: var(--poppins);
   color: var(--black-200);
-  font-size: 17px;
+  font-size: 14px;
   text-transform: uppercase;
   text-decoration: none;
 
@@ -57,10 +57,15 @@
 
 /* Header Button */
 .header__button {
-  padding: 10px 20px;
+  padding: 5px 20px;
 
   display: flex;
   gap: 10px;
+}
+
+.header__button a img {
+  height: 30px;
+  width: 30px;
 }
 
 
