--- a/src/components/MoreHeader.css
+++ b/src/components/MoreHeader.css
@@ -12,7 +12,7 @@
 }
 
 /* Header Menu */
-.more-header__menu {
+/* .more-header__menu {
   padding: 10px 20px;
   display: flex;
   align-items: center;
@@ -21,38 +21,30 @@
   list-style: none;
 
   justify-content: center !important;
+} */
+
+.more-header__nav .more-header__link {
+  padding: 0px 15px;
 }
 
-.more-header__menu .more-header__link {
-  font-weight: 500;
-  font-family: var(--poppins);
-  color: var(--color-white);
-  font-size: 17px;
-  text-transform: uppercase;
-  text-decoration: none;
-
-  line-height: 20px;
-  cursor: pointer;
+.more-header__nav .more-header__link img {
+  width: 32px;
+  height: 32px;
 }
 
-.more-header__menu .more-header__link:hover {
+
+.more-header__nav .more-header__link:hover {
   opacity: 0.7;
   text-decoration: underline;
 }
 
 
 /* Mobile Responsive */
-@media screen and (max-width: 1024px) {
-  .more-header__menu {
-    margin: 0 !important;
-    margin-left: auto !important;
-  }
+/* @media screen and (max-width: 1024px) {
   
 }
 
 
 @media screen and (max-width: 768px) {
-  .more-header__menu {
-    gap: 10px;
-  }
-}
+  
+} */
